# websocket-comparisons

./: .gitignore  README.md  start_test.sh  tester.go  wsclient.html
Go-Gorilla/: client2.go  server.go  testing.go
Java-Netty/: README.md  pom.xml
Java-Netty/src/main/java/fhws/: EchoChannelHandler.java  EchoChannelInitializer.java  KabuKafkaConsumer.java  WSServer.java
Java-WebSocket/: README.md  pom.xml
Java-WebSocket-Test/: .project  pom.xml
Java-WebSocket-Test/src/main/java/md/abby/testapp/: App.java  SimpleServer.java
Java-WebSocket-Test/src/test/java/md/abby/testapp/: AppTest.java
Java-WebSocket/src/main/java/md/abby/testapp/: App.java  SimpleServer.java
Kotlin-ktor/: README.md  build.gradle  settings.gradle
Kotlin-ktor/src/: Application.kt
Kotlin-ktor/test/: ApplicationTest.kt
NettyEcho/: pom.xml
NettyEcho/src/main/java/net/netty/websocket/echo/: EchoChannelHandler.java  EchoServer.java
Node-websockets_ws/: package-lock.json  package.json  server.js
Rust-WebSocket-Test/: Cargo.toml
Rust-WebSocket-Test/src/: main.rs
Rust-tungstenite/: Cargo.toml
Rust-tungstenite/src/: main.rs
Rust-websocket/: Cargo.toml
Rust-websocket/src/: main.rs
artillery/: my-functions.js  ws.yml
gorilla/: client.go  client2.go  server.go  server2.go
websockets_ws/: package-lock.json  server.js  test.md
