[package]
name = "Rust-tungstenite"
version = "0.1.0"
authors = ["abby <abby@kabu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.9.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
tokio-io = "0.1.12"
may = "0.3.14"